force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_Available__c</fullName>
    <formula>npsp__Total_Allocations__c - Total_Disbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>