force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Date__c</fullName>
    <label>First Disbursement Date</label>
    <summarizedField>GAU_Expenditure__c.CreatedDate</summarizedField>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>