force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Largest_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Largest_Disbursement__c</fullName>
    <label>Largest Disbursement ($)</label>
    <summarizedField>GAU_Expenditure__c.Amount__c</summarizedField>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>