force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Last_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Disbursement_Date__c</fullName>
    <label>Last Disbursement Date</label>
    <summarizedField>GAU_Expenditure__c.CreatedDate</summarizedField>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>