force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Smallest_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Smallest_Disbursement__c</fullName>
    <label>Smallest Disbursement</label>
    <summarizedField>GAU_Expenditure__c.Amount__c</summarizedField>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>