force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName>
    <label>Total Disbursed ($)</label>
    <summarizedField>GAU_Expenditure__c.Amount__c</summarizedField>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>