force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Total_Number_of_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Disbursements__c</fullName>
    <label>Total Number of Disbursements</label>
    <summaryForeignKey>GAU_Expenditure__c.General_Accounting_Unit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>